--- a/HabitTracker/HabitTracker/AppShell.xaml
+++ b/HabitTracker/HabitTracker/AppShell.xaml
@@ -60,25 +60,27 @@
         </ResourceDictionary>
     </Shell.Resources>
 
+    <Shell.FlyoutHeaderTemplate>
+        <DataTemplate>
+            <StackLayout HorizontalOptions="Center">
+                <Label Text="Habit Tracker" FontAttributes="Bold" FontSize="Title" Padding="10" HorizontalOptions="Center"/>
+            </StackLayout>
+        </DataTemplate>
+    </Shell.FlyoutHeaderTemplate>
+
     <FlyoutItem Title="Info" Icon="icon_about.png">
         <ShellContent Route="AboutPage" ContentTemplate="{DataTemplate local:InfoPage}" />
     </FlyoutItem>
     <FlyoutItem Title="Habits" Icon="icon_feed.png">
         <ShellContent Route="HabitsPage" ContentTemplate="{DataTemplate local:HabitsPage}" />
     </FlyoutItem>
-    <FlyoutItem Title="Calender" Icon="icon_feed.png">
+    <FlyoutItem Title="Calender" Icon="icon_calander.png">
         <ShellContent Route="HabitsPage" ContentTemplate="{DataTemplate local:HabitsPage}" />
     </FlyoutItem>
 
     <MenuItem Text="Exit" StyleClass="MenuItemLayoutStyle" Clicked="OnExitClicked"/>
 
 
-    <Shell.FlyoutHeaderTemplate>
-        <DataTemplate>
-            <StackLayout HorizontalOptions="Center" BackgroundColor="{StaticResource Primary}">
-                <Label Text="Habit Tracker" FontAttributes="Bold" FontSize="Title" Padding="10" HorizontalOptions="Center" TextColor="White"/>
-            </StackLayout>
-        </DataTemplate>
-    </Shell.FlyoutHeaderTemplate>
+   
 
 </Shell>
