--- a/HabitTracker/HabitTracker/Views/HabitDetailPage.xaml
+++ b/HabitTracker/HabitTracker/Views/HabitDetailPage.xaml
@@ -1,9 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:vm="clr-namespace:HabitTracker.ViewModels"
              x:Class="HabitTracker.Views.HabitDetailPage"
              Title="{Binding Title}">
 
+    <ContentPage.BindingContext>
+        <vm:CalenderViewModel />
+    </ContentPage.BindingContext>
+
+    
     <StackLayout Spacing="20" Padding="15">
         
         <StackLayout Orientation="Horizontal">
