--- a/HabitTracker/HabitTracker/Views/NewHabitPage.xaml
+++ b/HabitTracker/HabitTracker/Views/NewHabitPage.xaml
@@ -6,17 +6,18 @@
              Title="New Habit"
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
              ios:Page.UseSafeArea="true">
+    
     <ContentPage.Content>
         <StackLayout Spacing="3" Padding="15">
             <Label Text="Name" FontSize="Medium" FontAttributes="Bold" />
-            <Entry Text="{Binding Name, Mode=TwoWay}" FontSize="Medium" />
+            <Entry Text="{Binding Name, Mode=TwoWay}" FontSize="Medium" MaxLength="32" />
 
-            <Label Text="Score" FontSize="Medium" FontAttributes="Bold" />
-            <Editor Text="{Binding Score, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Medium" Margin="0" />
+            <Label Text="Score" FontSize="Medium" FontAttributes="Bold"  />
+            <Editor Text="{Binding Score, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Medium" Margin="0" MaxLength="6" />
             
             <StackLayout Orientation="Horizontal">
                 <Button Text="Cancel" Command="{Binding CancelCommand}" HorizontalOptions="FillAndExpand"/>
-                <Button Text="Save" Command="{Binding SaveCommand}" HorizontalOptions="FillAndExpand"/>
+                <Button Text="Save"   Command="{Binding SaveCommand}"   HorizontalOptions="FillAndExpand"/>
             </StackLayout>
 
             <Label Text="{Binding Error}" FontSize="Medium" TextColor="Red" />
