--- a/HabitTracker/HabitTracker/Views/HabitsPage.xaml
+++ b/HabitTracker/HabitTracker/Views/HabitsPage.xaml
@@ -15,7 +15,7 @@
     <RefreshView x:DataType="local:HabitsViewModel" Command="{Binding LoadHabitsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
         <CollectionView x:Name="ItemsListView"
                 ItemsSource="{Binding Habits}"
-                SelectionMode="None">
+                SelectionMode="Single">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Grid Padding="20, 15, 20, 15" x:DataType="model:Habit">
