--- a/HabitTracker/HabitTracker/Views/SelectHabitPage.xaml
+++ b/HabitTracker/HabitTracker/Views/SelectHabitPage.xaml
@@ -1,17 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="HabitTracker.Views.CalenderPage"
-             Title="{Binding Title}"
-             xmlns:local="clr-namespace:HabitTracker.ViewModels"  
-             xmlns:model="clr-namespace:HabitTracker.Models">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:model="clr-namespace:HabitTracker.Models" 
+             xmlns:local="clr-namespace:HabitTracker.ViewModels"
+             x:Class="HabitTracker.Views.SelectHabitPage"
+             Title="{Binding Title}">
 
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Add" Command="{Binding AddHabitCommand}" />
-    </ContentPage.ToolbarItems>
-
-
-    <RefreshView x:DataType="local:CalenderViewModel" Command="{Binding LoadHabitsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+    <RefreshView x:DataType="local:SelectHabitViewModel" Command="{Binding LoadHabitsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
         <CollectionView x:Name="ItemsListView"
                 ItemsSource="{Binding Habits}"
                 SelectionMode="Single">
@@ -22,7 +17,7 @@
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="auto"/>
                         </Grid.ColumnDefinitions>
-                        
+
                         <Label Grid.Column="0"
                             Text="{Binding Name}" 
                             Style="{DynamicResource ListItemTextStyle}" 
@@ -31,11 +26,11 @@
                             Text="{Binding Score}" 
                             Style="{DynamicResource ListItemDetailTextStyle}"
                             FontSize="16"/>
-                        
+
                         <Grid.GestureRecognizers>
                             <TapGestureRecognizer 
                                 NumberOfTapsRequired="1"
-                                Command="{Binding Source={RelativeSource AncestorType={x:Type local:CalenderViewModel}}, Path=HabitClickedCommand}"		
+                                Command="{Binding Source={RelativeSource AncestorType={x:Type local:SelectHabitViewModel}}, Path=HabitClickedCommand}"		
                                 CommandParameter="{Binding .}">
                             </TapGestureRecognizer>
                         </Grid.GestureRecognizers>
@@ -44,4 +39,6 @@
             </CollectionView.ItemTemplate>
         </CollectionView>
     </RefreshView>
+
+
 </ContentPage>
