--- a/HabitTracker/HabitTracker/App.xaml
+++ b/HabitTracker/HabitTracker/App.xaml
@@ -8,6 +8,11 @@
     <Application.Resources>
         <ResourceDictionary>
             <Color x:Key="Primary">#8529D1</Color>
+            <LinearGradientBrush x:Key="StandardBackground" StartPoint="0,0" EndPoint="0,1">
+                <GradientStop Color="#7a20c4" Offset="0.0" />
+                <GradientStop Color="#9e47e5" Offset="1.0" />
+            </LinearGradientBrush>
+            
             <Style TargetType="Button">
                 <Setter Property="TextColor" Value="White"></Setter>
                 <Setter Property="VisualStateManager.VisualStateGroups">
