--- a/HabitTracker/HabitTracker/AppShell.xaml
+++ b/HabitTracker/HabitTracker/AppShell.xaml
@@ -31,7 +31,7 @@
                             <VisualState x:Name="Normal">
                                 <VisualState.Setters>
                                     <Setter Property="BackgroundColor" Value="{x:OnPlatform UWP=Transparent, iOS=White}" />
-                                    <Setter TargetName="FlyoutItemLabel" Property="Label.TextColor" Value="{StaticResource Primary}" />
+                                    <Setter TargetName="FlyoutItemLabel" Property="Label.TextColor" Value="Black" />
                                 </VisualState.Setters>
                             </VisualState>
                             <VisualState x:Name="Selected">
@@ -62,8 +62,8 @@
 
     <Shell.FlyoutHeaderTemplate>
         <DataTemplate>
-            <StackLayout HorizontalOptions="Center">
-                <Label Text="Habit Tracker" FontAttributes="Bold" FontSize="Title" Padding="10" HorizontalOptions="Center"/>
+            <StackLayout HorizontalOptions="Center" Background="{StaticResource StandardBackground}">
+                <Label Text="Habit Tracker" FontAttributes="Bold" FontSize="Title" Padding="10" HorizontalOptions="Center" TextColor="White"/>
             </StackLayout>
         </DataTemplate>
     </Shell.FlyoutHeaderTemplate>
