--- a/HabitTracker/HabitTracker/Views/CalenderPage.xaml
+++ b/HabitTracker/HabitTracker/Views/CalenderPage.xaml
@@ -10,45 +10,73 @@
     <ContentPage.Resources>
         <conv:IntToColorConverter x:Key="intColorConverter" />
     </ContentPage.Resources>
-    
+
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Add" Command="{Binding AddHabitCommand}" />
     </ContentPage.ToolbarItems>
 
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
 
-    <RefreshView x:DataType="local:CalenderViewModel" Command="{Binding LoadHabitsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
-        <CollectionView x:Name="ItemsListView"
+        <RefreshView Grid.Row="0" x:DataType="local:CalenderViewModel" Command="{Binding LoadHabitsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+            <CollectionView x:Name="ItemsListView"
                 ItemsSource="{Binding Habits}"
                 SelectionMode="Single">
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <Grid Padding="20, 15, 20, 15" x:DataType="model:Habit">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="auto"/>
-                        </Grid.ColumnDefinitions>
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Padding="20, 15, 20, 15" x:DataType="model:Habit">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="auto"/>
+                            </Grid.ColumnDefinitions>
 
-                        <Label Grid.Column="0"
+                            <Label Grid.Column="0"
                             Text="{Binding Name}" 
                             Style="{DynamicResource ListItemTextStyle}" 
                             FontSize="16" />
-                        <Label Grid.Column="1" 
+                            <Label Grid.Column="1" 
                             Text="{Binding Score}" 
                             Style="{DynamicResource ListItemDetailTextStyle}"
                             FontSize="17"
                             FontAttributes="Bold"
                             TextColor="{Binding Score,  Converter={StaticResource intColorConverter}, Mode=OneWay}"/>
-                        
-                        <Grid.GestureRecognizers>
-                            <TapGestureRecognizer 
+
+                            <Grid.GestureRecognizers>
+                                <TapGestureRecognizer 
                                 NumberOfTapsRequired="1"
                                 Command="{Binding Source={RelativeSource AncestorType={x:Type local:CalenderViewModel}}, Path=HabitClickedCommand}"		
-                                CommandParameter="{Binding .}">
-                            </TapGestureRecognizer>
-                        </Grid.GestureRecognizers>
-                    </Grid>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
-    </RefreshView>
+                                CommandParameter="{Binding .}"/>
+                                <SwipeGestureRecognizer
+                                Direction="Left" 
+                                Command="{Binding Source={RelativeSource AncestorType={x:Type local:CalenderViewModel}}, Path=LeftSwipeCommand}"/>
+                            </Grid.GestureRecognizers>
+                        </Grid>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </RefreshView>
+
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Button Grid.Column="0" Text="L"      Command="{Binding LeftSwipeCommand}"/>
+            <Button Grid.Column="1" Text="Weekly" Command="{Binding LeftSwipeCommand}"/>
+            <Button Grid.Column="2" Text="R"      Command="{Binding RightSwipeCommand}"/>
+        </Grid>
+
+        <Grid.GestureRecognizers>
+            <SwipeGestureRecognizer Direction="Left"  Command="{Binding LeftSwipeCommand}"/>
+            <SwipeGestureRecognizer Direction="Right" Command="{Binding RightSwipeCommand}"/>
+        </Grid.GestureRecognizers>
+    </Grid>
 </ContentPage>
