--- a/HabitTracker/HabitTracker/Views/CalenderWeeklyPage.xaml
+++ b/HabitTracker/HabitTracker/Views/CalenderWeeklyPage.xaml
@@ -8,15 +8,38 @@
 
     <ContentPage.Resources>
         <conv:IntToColorConverter x:Key="intColorConverter" />
+        <conv:ScoreToColorConverter x:Key="scoreColorConverter" />
     </ContentPage.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <RefreshView Grid.Row="0" x:DataType="local:CalenderWeeklyViewModel" Command="{Binding LoadHabitsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+        <Grid Grid.Row="0" BackgroundColor="#9d45e5"  Padding="20,5,19,5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="6*" />
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
+
+            <Label Grid.Column="1"
+                   Text="{Binding SubTitle}" 
+                   FontSize="19"
+                   TextColor="White" 
+                   
+                   VerticalOptions="Center"/>
+
+            <Label Grid.Column="2" 
+                    Text="{Binding Score}" 
+                    FontSize="19"
+                    FontAttributes="Bold"
+                    TextColor="{Binding Score, Converter={StaticResource scoreColorConverter}, Mode=OneWay}"/>
+        </Grid>
+        
+        <RefreshView Grid.Row="1" x:DataType="local:CalenderWeeklyViewModel" Command="{Binding LoadHabitsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
             <CollectionView x:Name="ItemsListView"
                 ItemsSource="{Binding Habits}"
                 SelectionMode="Single">
@@ -51,7 +74,7 @@
             </CollectionView>
         </RefreshView>
 
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
@@ -64,11 +87,11 @@
             </Grid.ColumnDefinitions>
 
             <Grid    Grid.Column="0" Background="{StaticResource StandardBackground}" Grid.ColumnSpan="5"/>
-            <Button  Grid.Column="0" Text="〈"     BackgroundColor="Transparent" Command="{Binding PreviousWeekCommand}" FontSize="Large"/>
+            <Button  Grid.Column="0" Text="〈"     BackgroundColor="Transparent" Command="{Binding PreviousWeekCommand}" FontSize="Large" FontAttributes="Bold"/>
             <BoxView Grid.Column="1" Grid.Row="0"  BackgroundColor="Black" WidthRequest="1" VerticalOptions="FillAndExpand" HorizontalOptions="End"/>
             <Button  Grid.Column="2" Text="Today"  BackgroundColor="Transparent" Command="{Binding TodayCommand}"/>
             <BoxView Grid.Column="3" Grid.Row="0"  BackgroundColor="Black" WidthRequest="1" VerticalOptions="FillAndExpand" HorizontalOptions="End"/>
-            <Button  Grid.Column="4" Text="〉"     BackgroundColor="Transparent" Command="{Binding NextWeekCommand}" FontSize="Large"/>
+            <Button  Grid.Column="4" Text="〉"     BackgroundColor="Transparent" Command="{Binding NextWeekCommand}" FontSize="Large" FontAttributes="Bold"/>
         </Grid>
 
         <Grid.GestureRecognizers>
