--- a/HabitTracker/HabitTracker/Views/InfoPage.xaml
+++ b/HabitTracker/HabitTracker/Views/InfoPage.xaml
@@ -21,7 +21,7 @@
                 <Label FontSize="Title" Text="Track Your Habits" />
                 <Label FontSize="Body"  Text="This app helps you track your habits. Each habit has an associated score. Negative score indicates it's a bad habit and positive score indicates it's a good habit." />
                 <Label FontSize="Body"  Text=" &quot;Good habits are the key to all success&quot; " FontAttributes="Italic" Padding="0, 15, 0, 15"/>
-                <Label FontSize="Body"  Text="Intructions:" FontAttributes="Bold"/>
+                <Label FontSize="Body"  Text="Instructions:" FontAttributes="Bold"/>
                 <Label FontSize="Body"  Text="Navigate to the 'Habits' page and create your habits. Then navigate to the 'Calender - Daily' page and add your completed habits." />
             </StackLayout>
         </ScrollView>
