--- a/HabitTracker/HabitTracker/Views/NewHabitPage.xaml
+++ b/HabitTracker/HabitTracker/Views/NewHabitPage.xaml
@@ -12,10 +12,18 @@
             <Label Text="Name" FontSize="Medium" FontAttributes="Bold" />
             <Entry Text="{Binding Name, Mode=TwoWay}" FontSize="Medium" MaxLength="32" />
 
-            <Label Text="Score" FontSize="Medium" FontAttributes="Bold"  />
-            <Entry Text="{Binding Score, Mode=TwoWay}" FontSize="Medium" Margin="0" MaxLength="5" />
-            
-            <StackLayout Orientation="Horizontal">
+            <Label Text="Score" FontSize="Medium" FontAttributes="Bold" Padding="0,10,0,0" />
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+                
+                <Entry Grid.Column="0" IsReadOnly="True" Text="{Binding Score}" FontSize="Medium" />
+                <Stepper Grid.Column="1" Maximum="999" Minimum="-999" Increment="1" Value="{Binding Score}"/>
+            </Grid>
+
+            <StackLayout Orientation="Horizontal" Padding="0,25,0,5">
                 <Button Text="Cancel" Command="{Binding CancelCommand}" HorizontalOptions="FillAndExpand"/>
                 <Button Text="Save"   Command="{Binding SaveCommand}"   HorizontalOptions="FillAndExpand"/>
             </StackLayout>
