--- a/HabitTracker/HabitTracker/Views/FavoriteHabitDetailPage.xaml
+++ b/HabitTracker/HabitTracker/Views/FavoriteHabitDetailPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:HabitTracker.ViewModels"
-             x:Class="HabitTracker.Views.HabitDetailPage"
+             x:Class="HabitTracker.Views.FavoriteHabitDetailPage"
              Title="{Binding Title}">
 
     <ContentPage.BindingContext>
