--- a/HabitTracker/HabitTracker/Views/CompletedHabitDetailPage.xaml
+++ b/HabitTracker/HabitTracker/Views/CompletedHabitDetailPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:vm="clr-namespace:HabitTracker.ViewModels"
-             x:Class="HabitTracker.Views.HabitDetailCalenderPage"
+             x:Class="HabitTracker.Views.CompletedHabitDetailPage"
              Title="{Binding Title}">
 
     <ContentPage.BindingContext>
