--- a/HabitTracker/HabitTracker/Views/FavoriteHabitsPage.xaml
+++ b/HabitTracker/HabitTracker/Views/FavoriteHabitsPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="HabitTracker.Views.HabitsPage"
+             x:Class="HabitTracker.Views.FavoriteHabitsPage"
              Title="{Binding Title}"
              xmlns:local="clr-namespace:HabitTracker.ViewModels"  
              xmlns:model="clr-namespace:HabitTracker.Models" 
